namespace Spg_Schoolrating.Application.Domain
{
    public class Address
    {
        public string Street { get; set; }
        public string Zip { get; set; }
        public string City { get; set; }
    }

}
