namespace Spg_Schoolrating.Application.Domain
{
    public class Name
    {
        public string Title { get; set; }
        public string Firstname { get; set; }
        public string Lastname { get; set; }
    }

}
