namespace Spg_Schoolrating.Application.Domain
{
    public class RatingCategory
    {
        public int Id { get; set; }
        public string Name { get; set; }

    }

}
