namespace Spg_Schoolrating.Application.Domain
{
    public class SchoolRatingCategory : RatingCategory
    {

    }

}
