namespace Spg_Schoolrating.Application.Domain
{
    public enum SchoolType { VS, AHS, BHS, NMS }

}
