namespace Spg_Schoolrating.Application.Domain
{
    public class TeacherRatingCategory : RatingCategory
    { 
    }

}
